--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li>Café - <strong>R$ 15,00</strong></li>
         <li>Bolo de chocolate - <strong>R$ 12,00</strong></li>
-        <li>Energético - <strong>R$ 8,00</strong></li>
+        <li>Monster - <strong>R$ 8,00</strong></li>
     </ul>
 
     <p>Total - <strong>R$ 35,00</strong></p>
