mudei chocolate pra morango

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul>
         <li>Café - <strong>R$ 15,00</strong></li>
-        <li>Bolo de chocolate - <strong>R$ 12,00</strong></li>
+        <li>Bolo de morango - <strong>R$ 12,00</strong></li>
         <li>Monster - <strong>R$ 8,00</strong></li>
     </ul>
 
